src/bootstrapper/snapshots/x_tui__bootstrapper__test__base.snap
---
source: src/bootstrapper/test.rs
expression: out.as_str()
---
          $
          $
          $
          $
          $
          $
          $
          $
          $
          $
