src/bootstrapper/snapshots/x_tui__bootstrapper__test__each-basics-0.snap
---
source: src/bootstrapper/test.rs
expression: out.as_str()
---
0         $
1         $
2         $
3         $
4         $
          $
          $
          $
          $
          $
