src/bootstrapper/snapshots/x_tui__bootstrapper__test__each-basics-2.snap
---
source: src/bootstrapper/test.rs
expression: out.as_str()
---
0         $
1         $
2         $
3         $
4         $
5         $
6         $
          $
          $
          $
